--- a/tools/tailwind/style.css
+++ b/tools/tailwind/style.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
 @plugin 'tailwindcss-animate';
 
@@ -105,6 +106,9 @@
   ::file-selector-button {
     border-color: var(--color-gray-200, currentColor);
   }
+  body {
+    letter-spacing: var(--tracking-normal);
+  }
 }
 
 @layer base {
@@ -165,7 +169,7 @@
 
   .dark {
     --selected: 350 50% 30%;
-    --nav: 350 50% 40%;
+    --nav: 350 50% 20%;
     --elevated: 0 0% 20%;
 
     --background: 50 20% 13%;
@@ -240,4 +244,202 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+/*
+  ---break---
+*/
+
+@theme inline {
+  --font-sans: Open Sans, sans-serif;
+  --font-mono: IBM Plex Mono, monospace;
+  --font-serif: Source Serif 4, serif;
+  --radius: 1.5rem;
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+  --tracking-normal: var(--tracking-normal);
+  --shadow-2xl: var(--shadow-2xl);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-md: var(--shadow-md);
+  --shadow: var(--shadow);
+  --shadow-sm: var(--shadow-sm);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-2xs: var(--shadow-2xs);
+  --spacing: var(--spacing);
+  --letter-spacing: var(--letter-spacing);
+  --shadow-offset-y: var(--shadow-offset-y);
+  --shadow-offset-x: var(--shadow-offset-x);
+  --shadow-spread: var(--shadow-spread);
+  --shadow-blur: var(--shadow-blur);
+  --shadow-opacity: var(--shadow-opacity);
+  --color-shadow-color: var(--shadow-color);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --color-foreground: var(--foreground);
+  --color-background: var(--background);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+}
+
+/*
+  ---break---
+*/
+
+:root {
+  --background: oklch(0.97 0.01 314.78);
+  --foreground: oklch(0.37 0.03 259.73);
+  --card: oklch(1.0 0 0);
+  --card-foreground: oklch(0.37 0.03 259.73);
+  --popover: oklch(1.0 0 0);
+  --popover-foreground: oklch(0.37 0.03 259.73);
+  --primary: oklch(0.71 0.16 293.54);
+  --primary-foreground: oklch(1.0 0 0);
+  --secondary: oklch(0.91 0.05 306.09);
+  --secondary-foreground: oklch(0.45 0.03 256.8);
+  --muted: oklch(0.95 0.03 307.17);
+  --muted-foreground: oklch(0.55 0.02 264.36);
+  --accent: oklch(0.94 0.03 321.94);
+  --accent-foreground: oklch(0.37 0.03 259.73);
+  --destructive: oklch(0.81 0.1 19.57);
+  --destructive-foreground: oklch(1.0 0 0);
+  --border: oklch(0.91 0.05 306.09);
+  --input: oklch(0.91 0.05 306.09);
+  --ring: oklch(0.71 0.16 293.54);
+  --chart-1: oklch(0.71 0.16 293.54);
+  --chart-2: oklch(0.61 0.22 292.72);
+  --chart-3: oklch(0.54 0.25 293.01);
+  --chart-4: oklch(0.49 0.24 292.58);
+  --chart-5: oklch(0.43 0.21 292.76);
+  --radius: 1.5rem;
+  --sidebar: oklch(0.91 0.05 306.09);
+  --sidebar-foreground: oklch(0.37 0.03 259.73);
+  --sidebar-primary: oklch(0.71 0.16 293.54);
+  --sidebar-primary-foreground: oklch(1.0 0 0);
+  --sidebar-accent: oklch(0.94 0.03 321.94);
+  --sidebar-accent-foreground: oklch(0.37 0.03 259.73);
+  --sidebar-border: oklch(0.91 0.05 306.09);
+  --sidebar-ring: oklch(0.71 0.16 293.54);
+  --font-sans: Open Sans, sans-serif;
+  --font-serif: Source Serif 4, serif;
+  --font-mono: IBM Plex Mono, monospace;
+  --shadow-color: hsl(0 0% 0%);
+  --shadow-opacity: 0.08;
+  --shadow-blur: 16px;
+  --shadow-spread: -4px;
+  --shadow-offset-x: 0px;
+  --shadow-offset-y: 8px;
+  --letter-spacing: 0em;
+  --spacing: 0.25rem;
+  --shadow-2xs: 0px 8px 16px -4px hsl(0 0% 0% / 0.04);
+  --shadow-xs: 0px 8px 16px -4px hsl(0 0% 0% / 0.04);
+  --shadow-sm: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 1px 2px -5px
+    hsl(0 0% 0% / 0.08);
+  --shadow: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 1px 2px -5px
+    hsl(0 0% 0% / 0.08);
+  --shadow-md: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 2px 4px -5px
+    hsl(0 0% 0% / 0.08);
+  --shadow-lg: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 4px 6px -5px
+    hsl(0 0% 0% / 0.08);
+  --shadow-xl: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 8px 10px -5px
+    hsl(0 0% 0% / 0.08);
+  --shadow-2xl: 0px 8px 16px -4px hsl(0 0% 0% / 0.2);
+  --tracking-normal: 0em;
+}
+
+/*
+  ---break---
+*/
+
+.dark {
+  --background: oklch(0.22 0.01 56.04);
+  --foreground: oklch(0.93 0.03 272.79);
+  --card: oklch(0.28 0.03 307.23);
+  --card-foreground: oklch(0.93 0.03 272.79);
+  --popover: oklch(0.28 0.03 307.23);
+  --popover-foreground: oklch(0.93 0.03 272.79);
+  --primary: oklch(0.79 0.12 295.75);
+  --primary-foreground: oklch(0.22 0.01 56.04);
+  --secondary: oklch(0.34 0.04 308.85);
+  --secondary-foreground: oklch(0.87 0.01 258.34);
+  --muted: oklch(0.28 0.03 307.23);
+  --muted-foreground: oklch(0.71 0.02 261.32);
+  --accent: oklch(0.39 0.05 304.64);
+  --accent-foreground: oklch(0.87 0.01 258.34);
+  --destructive: oklch(0.81 0.1 19.57);
+  --destructive-foreground: oklch(0.22 0.01 56.04);
+  --border: oklch(0.34 0.04 308.85);
+  --input: oklch(0.34 0.04 308.85);
+  --ring: oklch(0.79 0.12 295.75);
+  --chart-1: oklch(0.79 0.12 295.75);
+  --chart-2: oklch(0.71 0.16 293.54);
+  --chart-3: oklch(0.61 0.22 292.72);
+  --chart-4: oklch(0.54 0.25 293.01);
+  --chart-5: oklch(0.49 0.24 292.58);
+  --radius: 1.5rem;
+  --sidebar: oklch(0.34 0.04 308.85);
+  --sidebar-foreground: oklch(0.93 0.03 272.79);
+  --sidebar-primary: oklch(0.79 0.12 295.75);
+  --sidebar-primary-foreground: oklch(0.22 0.01 56.04);
+  --sidebar-accent: oklch(0.39 0.05 304.64);
+  --sidebar-accent-foreground: oklch(0.87 0.01 258.34);
+  --sidebar-border: oklch(0.34 0.04 308.85);
+  --sidebar-ring: oklch(0.79 0.12 295.75);
+  --shadow-color: hsl(0 0% 0%);
+  --letter-spacing: 0em;
+  --spacing: 0.25rem;
+  --font-sans: Open Sans, sans-serif;
+  --font-serif: Source Serif 4, serif;
+  --font-mono: IBM Plex Mono, monospace;
+  --shadow-opacity: 0.08;
+  --shadow-blur: 16px;
+  --shadow-spread: -4px;
+  --shadow-offset-x: 0px;
+  --shadow-offset-y: 8px;
+  --shadow-2xs: 0px 8px 16px -4px hsl(0 0% 0% / 0.04);
+  --shadow-xs: 0px 8px 16px -4px hsl(0 0% 0% / 0.04);
+  --shadow-sm: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 1px 2px -5px
+    hsl(0 0% 0% / 0.08);
+  --shadow: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 1px 2px -5px
+    hsl(0 0% 0% / 0.08);
+  --shadow-md: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 2px 4px -5px
+    hsl(0 0% 0% / 0.08);
+  --shadow-lg: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 4px 6px -5px
+    hsl(0 0% 0% / 0.08);
+  --shadow-xl: 0px 8px 16px -4px hsl(0 0% 0% / 0.08), 0px 8px 10px -5px
+    hsl(0 0% 0% / 0.08);
+  --shadow-2xl: 0px 8px 16px -4px hsl(0 0% 0% / 0.2);
 }
